--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaReserva.cshtml
@@ -27,7 +27,7 @@
         </div>
         <div class="col-md-2">
             <select class="form-control" name="" id="comboBusq">
-                <option value="0">Tipo</option>
+                <option value="0">Ambos</option>
                 <option value="1">DNI</option>
                 <option value="2">Pasaporte</option>
             </select>
