--- a/WebApplication4/WebApplication4/Views/Ventas/Cierre.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Cierre.cshtml
@@ -284,11 +284,11 @@
                 url: "@Url.Action("CerrarCaja", "Ventas")",
                 data: { montos: montos, montod: montod },
                 success: function (data) {
-                    //alert("Eliminado");
+                    alert(data);
                     window.location.href = '/Ventas/Cierre';
                 },
-                error: function () {
-                    //alert("Error :(");
+                error: function (data) {
+                    alert(data);
                     window.location.href = '/Ventas/Cierre';
                 }
             });
