--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/Politicas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/Politicas.cshtml
@@ -5,7 +5,13 @@
     ViewBag.Title = "Politicas";
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
     var db = new WebApplication4.Models.inf245netsoft();
-    
+    int p1=0, p2=0, p3=0, p4=0, p5=0;
+    int a = 1, b = 2, c = 3, d = 4, e = 5;
+    p1 =(int) db.Politicas.Find(a).valor;
+    p2 = (int)db.Politicas.Find(b).valor;
+    p3 = (int)db.Politicas.Find(c).valor;
+    p4 = (int)db.Politicas.Find(d).valor;
+    p5 = (int)db.Politicas.Find(e).valor;
 }
 
 <div class="container-fluid">
@@ -45,14 +51,19 @@
                                 <span class="input-group-addon" id="reserva">días</span>
                             </div>
                         </div>
-
-                    </div> <br>
+                        <div class="col-md-3">
+                            <input type="text" value="@p1" class="form-control" aria-describedby="dolares" readonly="true">
+                        </div>
+                        </div> <br>
                     <div class="row">
                         <div class="col-md-3 col-md-offset-1">
                             <label for="">Máximo de reservas/compras por evento:</label>
                         </div>
                         <div class="col-md-3">
                             <input id="maxC" type="number" class="form-control">
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" value="@p2" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
                     </div><br>
                     <div class="row">
@@ -66,6 +77,9 @@
                                 <input id="monT" type="number" class="form-control" aria-describedby="min">
                             </div>
                         </div>
+                        <div class="col-md-3">
+                            <input type="text" value="@p3" class="form-control" aria-describedby="dolares" readonly="true">
+                        </div>
                     </div><br>
                     <div class="row">
                         <div class="col-md-3 col-md-offset-1">
@@ -74,8 +88,11 @@
                         </div>
                         <div class="col-md-3">
                             <div class="input-group">
-                                <input id="rAsg" type="number" class="form-control" aria-describedby="min">
+                                <input id="rAsg" type="number" class="form-control" >
                             </div>
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" value="@p5" class="form-control" aria-describedby="dolares" readonly="true">
                         </div>
                     </div><br>
                     <div class="row">
@@ -100,7 +117,9 @@
                                 <span class="input-group-addon" id="min">minutos</span>
                             </div>
                         </div>
-
+                        <div class="col-md-3">
+                            <input type="text" value="@p4" class="form-control" aria-describedby="dolares" readonly="true">
+                        </div>
                     </div><br>
                     <div class="row">
                         <div class="col-md-3 col-md-offset-5">
