--- a/WebApplication4/WebApplication4/Views/Ventas/Pago.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Pago.cshtml
@@ -105,7 +105,7 @@
                 <div class="form-group">
                     <label for="direccion" class="control-label col-md-2">Monto:</label>
                     <div class="col-md-2">
-                        <input type="number" class="form-control col-md-4" id="monto2">
+                        <input type="number" class="form-control col-md-4" id="monto2">*Monto negativo indica pago por parte del organizador
                     </div>
                 </div>
             </form>
